force-app/main/default/objects/Solutions_Late_Billing__c/Solutions_Late_Billing__c.object-meta.xml
<CustomObject>
    <label>Solutions Late Billing</label>
    <nameField>
        <label>Solutions Late Billing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solutions Late Billings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>