force-app/main/default/objects/Solutions_Late_Billing__c/fields/Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Status__c</fullName>
    <label>Billing Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>