force-app/main/default/objects/Solutions_Late_Billing__c/fields/ETB_year_Month__c.field-meta.xml
<CustomField>
    <fullName>ETB_year_Month__c</fullName>
    <label>ETB Year Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>