force-app/main/default/objects/Solutions_Late_Billing__c/fields/Order_Line_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_ID__c</fullName>
    <label>Order Line ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>