force-app/main/default/objects/Solutions_Late_Billing__c/fields/Order_Line_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Status__c</fullName>
    <label>Order Line Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>